--- a/Project: Sign-Up Form/style.css
+++ b/Project: Sign-Up Form/style.css
@@ -69,7 +69,7 @@ main {
   display: flex;
   position: relative;
   z-index: 1;
-  bottom: 15%;
+  bottom: 20%;
   left: 22%;
   color: white;
   gap: 4px;
@@ -93,6 +93,8 @@ form {
 .form-title {
   grid-row: 1/2;
   grid-column: 1/3;
+  font-size: 20px;
+  font-family: sans-serif;
 }
 legend {
   text-transform: uppercase;
